Tue Mar 14 09:46:25 UTC 2006  Nilabja Roy  <roy_n@dre.vanderbilt.edu>

        * DAnCE/NodeManager/MonitorController.cpp:
          Reverting back to previous version. Mistakenly added conflicted version.

Thu Mar  9 09:18:58 2006  Douglas C. Schmidt  <schmidt@cse.wustl.edu>

        * COPYING: Updated the date to include 2006.
          Thanks to Alan Kierstead <ackierstead at fedex dot com> for
          motivating the fix to this oversight.

Thu Mar 09 08:55:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/Interfaces/ExecutionManagerDaemon.idl:
        * DAnCE/Interfaces/NodeManagerDaemon.idl:
          New idl files, these are the same as there are now in the directory
          but then just renamed to match the interfaces in these files and
          then don't conflict with the ones I created in ciao.

        * DAnCE/Interfaces/ExecutionManager.idl:
        * DAnCE/Interfaces/NodeManager.idl:
          Removed, file names where not correct and now conflict with files in
          the ciao directory

        * DAnCE/Interfaces/Interfaces.mpc:
          Updated because of file renames

        * ciao/CCM_Base.idl:
          Removed old comment

        * ciao/CCM_Component.idl:
          Forward declare CORBA::IRObject instead of including the IFR_Client
          idl file

        * ciao/Deployment_Base.idl:
          Removed not needed include

        * ciao/Dynamic_Component_Activator.h:
          Reordered includes

        * ciao/Swapping_Servant_Home_Impl_Base.h:
        * ciao/Upgradeable_Context_Impl_T.h:
        * ciao/Swapping_Servant_Home_Impl_T.h:
        * ciao/Swapping_Servant_Home_Impl_T.cpp:
          Added ciao/ as prefix for the includes

        * ciao/Upgradeable_Context_Impl_T.h:
          Added private default constructor

        * ciao/Deployment.idl:
        * ciao/DomainApplicationManager.idl:
        * ciao/ExecutionManager.idl:
        * ciao/NodeApplication_Callback.idl: